<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YukAmal</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit" />
    <string name="onError">Terjadi kesalahan pada saat loading data</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://yukamal.com:80/.well-known/assetlinks.json\" }]</string>
    <string name="launch_activity">MainActivity</string>
    <string name="action_stop">Stop</string>
    <string name="location_updated">Updated: %1$s</string>
    <string name="latitude">Latitude: %.8f</string>
    <string name="longitude">Longitude: %.8f</string>
    <string name="current_location">Last location: %.8f / %.8f</string>
    <string name="error_lokasi">Tidak dapat menemukan lokasi</string>
    <string name="notice">Pemberitahuan</string>
    <string name="pukul">Pukul</string>
    <string name="waktu_sholat">Waktu Sholat</string>

    <string name="donasi_nav">Donasi</string>
    <string name="masjid_sekitar">Masjid Sekitar</string>
    <string name="event">Acara</string>
    <string name="info_nav">Informasi</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="hubungi">Hubungi Kami</string>
    <string name="rate">Rating</string>
    <string name="logout">Logout</string>

    <string name="title">Nama Masjid</string>
    <string name="alamat">Alamat Masjid</string>
    <string name="tipe">Tipe :</string>
    <string name="tahun_berdiri">Tahun Berdiri :</string>
    <string name="tipe_mushola">Tipe : Musholla</string>
    <string name="tipe_masjid">Tipe : Masjids</string>
    <string name="nominal_donasi">Masukkan Nominal Donasi</string>
    <string name="MasukkanEmail">Masukkan Email Anda</string>
    <string name="MasukkanPassword">Masukkan Password Anda</string>
    <string name="register">Tidak punya akun? Daftar di sini</string>

    <string name="you_are_offline">You are Offline</string>
    <string name="masjid_not_found">Masjid not found</string>
    <string name="icon_doang">icon doang</string>

</resources>
